--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator",
+  "name": "stocks",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,9 +14,13 @@
     "express": "~4.13.4",
     "gulp": "^3.9.1",
     "morgan": "~1.7.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
     "reactify": "^1.1.1",
     "redux": "^3.5.2",
     "serve-favicon": "~2.3.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
