--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "bootstrap": "^3.3.6",
     "browserify": "^13.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "gulp": "^3.9.1",
+    "jquery": "^3.1.0",
     "morgan": "~1.7.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
